Compare Samples and P-values
Added to "Using the Above to Compare Samples" and rearranged/added to P-values

--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -730,14 +730,13 @@
    "source": [
     "### Using the Above to Compare Samples  \n",
     "\n",
-    "* What have we learned?\n",
+    "* The difference between the means of samples from the same distribution has a mean of 0. \n",
+    "* We can use the distribution that we just calculated (the difference between the means of samples from the same distribution) to test our null hypothesis. \n",
+    "    * How likely is it that the difference between our two original samples was just by chance? In other words, where in the \"difference of means\" distribution does it fall?\n",
     "\n",
-    "* The difference between the means of samples from the same distribution has a mean of 0\n",
+    "* By comparing the differences between the means of samples from the same distribution, we can account for sampling variability.\n",
+    "    * Is the difference between youtube and vimeo within the sampling variability that we simulated? In this case, the difference (red dot) is nowhere near the distribution.\n",
     "\n",
-    "* This is very useful for testing the null hypothesis\n",
-    "  * Under the null hypothesis, we assume that the differences between the values observed across two samples is attributed to chance alone \n",
-    "\n",
-    "* Comparing the observed difference between the means of two samples to that obtained if samples of the same distribution shows how similar/dissimilar the samples while accounting for sampling variability\n",
     "\n"
    ]
   },
@@ -887,29 +886,15 @@
     "### The P-Value\n",
     "\n",
     "\n",
-    "The p-value is a convention used to estimate how far out into the tails is considered \"surprising\"\n",
-    "  * Based on the area in the tail, either upper or lower\n",
-    "     * Since we are working on the empirical distribution, it's easy to compute, as long as you don't mix them\n",
-    "       * The proportion of statistics that were either great than or lower than (depending on what we are testing)\n",
+    "The P-value is a convention used to estimate how far out into the tails is considered \"surprising\". It is based on the area in the tail, either upper or lower.\n",
+    "* This is easy to compute for an empirical distribution: just find the proportion of statistics that were greater than or less than our observed statistic.\n",
+    "\n",
+    "The P-value is the chance, based on the model in the null hypothesis, that the observed statistic is equal to the value that was observed in the data or is even further in the direction of the alternative. \n",
+    " - In this case, what is the probablility that our observed statistic fits into our null hypothesis (There is no difference between spending for males and females). \n",
+    "\n",
+    "When the P-value is small, we can say that the data supports the alternative hypothesis more than the null hypothesis.\n",
+    "Typically a P-value of less than 5% is considered \"statistically significant\" i.e. It'd be suprising if the null hypothesis was true. \n",
     "       \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### The P-value - Cont'd\n",
-    "\n",
-    "The P-value is the chance, based on the model in the null hypothesis, that the test statistic is equal to the value that was observed in the data or is even further in the direction of the alternative.\n",
-    "\n",
-    "* If a P-value is small, then the observed statistic is far away from what the null predicts.\n",
-    "  * The null is unlikely and the data supports the alternative\n",
-    "  * Typically, P-value is less than 5%,  “statistically significant.”\n",
-    "    * Reasonable to consider that occur in a frequency of 1/20 to be surprising "
    ]
   },
   {
@@ -922,7 +907,7 @@
    "source": [
     "### Hypothesis Testing Approach\n",
     "\n",
-    "* Strategy used for testing hypotheses will consist of the following steps:\n",
+    "Strategy used for testing hypotheses will consist of the following steps:\n",
     "\n",
     "1. We will assume that the null hypothesis is true and will compute some test statistic between the samples, or between the sample and population param.\n",
     "  * Identifying the appropriate statistic is critical \n",
@@ -930,7 +915,7 @@
     "\n",
     "2. Use permutations or bootstrapping to build a distribution of the statistic under the null hypothesis\n",
     "  \n",
-    "3. Use the distribution of the statistic to infer whether the obserd statistic is plausible under the null hypothesis\n",
+    "3. Use the distribution of the statistic to infer whether the observed statistic is plausible under the null hypothesis\n",
     "  * How likely are we to observe a value as extreme or more extreme than the observed statistic\n",
     "  \n",
     "  "
@@ -955,28 +940,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "95.0"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1010,6 +973,13 @@
     "conf_interval_95 = np.percentile(sample_students, (2.5, 97.5))\n",
     "conf_interval_95"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1097,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
