--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -211,6 +211,32 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "### Creating normally distributed data from numpy\n",
+    "using np.random.normal we can pass it 3 arguments\n",
+    "    1. Mean value of the dataset\n",
+    "    2. Standard deviation of the dataset\n",
+    "    3. Sample size to return *(also manipulates the shape of the data)\n",
+    "\n",
+    "\n",
+    "### Q. What line of code correctly builds an array containing 100 samples of normally distributed data with a mean of 10 and std. dev. of .1\n",
+    "\n",
+    "    A) np.rand.normal(100, 10, .1)\n",
+    "    B) np.random.normal(10, .1, 100)\n",
+    "    C) np.random.normal(100, 10, 0.1)\n",
+    "        \n",
+    "<details><summary>Answer</summary>\n",
+    "        np.random.normal(10, .1, 100)\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1097,7 +1123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
