--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -864,6 +864,32 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Above we have generated normalized data to represent the spending\n",
+    "difference between males and females using np.random.normal as we have seen before.\n",
+    "\n",
+    "Taking two datasets of similar shape (dimensionality) we can use np.concatenate to combine them and assign them to one dataset. In this example we start with male and female customer spending datasets and combine them together to create a generic customer spending dataset.\n",
+    "\n",
+    "We can use this when generating datasets that are made up of subsets of datasets or groups. \n",
+    "\n",
+    "### Q) We have generated a large group of balls of 3 different types, the data for each type has been generated and assigned to red_balls, blue_balls, and green_balls. What would be the correct code to combine them in to a set called all_balls?\n",
+    "\n",
+    "    1) all_balls = np.concatenate(red_balls, blue_balls, green_balls)\n",
+    "    2) all_balls = np.concatenate([red_balls, blue_balls, green_balls])\n",
+    "    3) all_balls = np.concatenate(red, np.concatenate(blue, green))\n",
+    "    \n",
+    "<details><summary>Answer</summary>\n",
+    "     all_balls = np.concatenate([red_balls, blue_balls, green_balls])\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
