Added some clarifications
Clarifying comparing samples and p-values

--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -769,6 +769,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Where in the \"difference of means\" distribution does our original observation fall?\n",
+    "Is the difference between youtube and vimeo within the sampling variability that we simulated? In this case, the difference (red dot) is nowhere near the distribution.\n",
+    "    * Therefore, it is highly unlikely that the difference arised by chance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -982,7 +991,7 @@
     "\n",
     "2. Use permutations or bootstrapping to build a distribution of the statistic under the null hypothesis\n",
     "  \n",
-    "3. Use the distribution of the statistic to infer whether the obserd statistic is plausible under the null hypothesis\n",
+    "3. Use the distribution of the statistic to infer whether the observed statistic is plausible under the null hypothesis\n",
     "  * How likely are we to observe a value as extreme or more extreme than the observed statistic\n",
     "  \n",
     "  "
@@ -1061,6 +1070,22 @@
     "\n",
     "conf_interval_95 = np.percentile(sample_students, (2.5, 97.5))\n",
     "conf_interval_95"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note\n",
+    "\n",
+    "This is an example of a two-tailed hypothesis. We are testing whether the observed mean was in the upper or lower 2.5%. On the other hand, a one-tailed hypothesis only tests for one side, that is:\n",
+    "    * conf_interval_95 = np.percentile(sample_students, (0, 95))\n",
+    "                            or\n",
+    "    * conf_interval_95 = np.percentile(sample_students, (5, 100))\n",
+    "\n",
+    "Remember, if the observed mean falls outside that interval, then it is considered statistically significant. This is why when given a p-value, it is also important to know how that p-value was derived. \n",
+    "\n",
+    "A more in-depth explanation (with pictures) can be found [here](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/)\n"
    ]
   },
   {
