--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -768,16 +768,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Mean Difference\n",
+    "\n",
+    "One reoccurring idea in these graphs is pointing out the mean difference of the shuffled data of means should center around 0.\n",
+    "\n",
+    "We use generated normally distributed data using np.random.normal and shuffle the sets by first concatenating the sets using np.concatenate then np.shuffle on the concatenated data set called all data.\n",
+    "the  code for the next part is somewhat misleading as the entirety of the data set contains 180 samples so we take the first 90  of all data and assign it to youtube_s and the last 90 and assign it to vimeo_s. \n",
+    "    \n",
+    "`youtube_s = all_data[:90]\n",
+    "vimeo_s = all_data[90:]`\n",
+    "\n",
+    "This is misleading as the data has been shuffled so there is a mix of vimeo generated data in youtube_s and youtube generated data in vimeo_s. The mixture of data is what gets the mean difference to average around 0.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
