Formatting and wording

--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -285,7 +285,7 @@
    "source": [
     "### Question\n",
     "\n",
-    "What is the mean of the distriution of the difference between the means?\n",
+    "What is the mean of the distribution of the difference between the means?\n",
     "\n",
     "```python\n",
     "youtube = np.random.normal(232, 2, 90)\n",
@@ -655,20 +655,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "### Question\n",
     "\n",
     "* What would the distribution of the shuffled difference between Vimeo and youtube if the samples are not balanced?\n",
-    " * Say, for instance, one sample has 100 and the second have 4 times more individuals"
+    "* Say, for instance, one sample has 100 and the second have 4 times more individuals"
    ]
   },
   {
@@ -865,7 +863,8 @@
     "\n",
     "male_spending = np.random.normal(450, 89, 230)\n",
     "female_spending = np.random.normal(456, 89, 190)\n",
-    "np.mean(male_spending) - np.mean(female_spending)"
+    "np.mean(male_spending) - np.mean(female_spending)\n",
+    "# Our observed statistic"
    ]
   },
   {
@@ -972,6 +971,7 @@
     }
    ],
    "source": [
+    "# Compute the P-value\n",
     "sum(np.array(means_difference) >= (np.mean(female_spending) - np.mean(male_spending))) / 1000"
    ]
   },
@@ -990,25 +990,14 @@
     "  * Based on the area in the tail, either upper or lower\n",
     "     * Since we are working on the empirical distribution, it's easy to compute, as long as you don't mix them\n",
     "       * The proportion of statistics that were either great than or lower than (depending on what we are testing)\n",
-    "       \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### The P-value - Cont'd\n",
     "\n",
     "The P-value is the chance, based on the model in the null hypothesis, that the test statistic is equal to the value that was observed in the data or is even further in the direction of the alternative.\n",
     "\n",
     "* If a P-value is small, then the observed statistic is far away from what the null predicts.\n",
     "  * The null is unlikely and the data supports the alternative\n",
     "  * Typically, P-value is less than 5%,  “statistically significant.”\n",
-    "    * Reasonable to consider that occur in a frequency of 1/20 to be surprising "
+    "    * Reasonable to consider that occur in a frequency of 1/20 to be surprising \n",
+    "       \n"
    ]
   },
   {
@@ -1057,28 +1046,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "95.0"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 209,
    "metadata": {
     "slideshow": {
@@ -1117,13 +1084,14 @@
     "#### Note\n",
     "\n",
     "This is an example of a two-tailed hypothesis. We are testing whether the observed mean was in the upper or lower 2.5%. On the other hand, a one-tailed hypothesis only tests for one side, that is:\n",
-    "    * conf_interval_95 = np.percentile(sample_students, (0, 95))\n",
+    "```python\n",
+    "    conf_interval_95 = np.percentile(sample_students, (0, 95))\n",
     "                            or\n",
-    "    * conf_interval_95 = np.percentile(sample_students, (5, 100))\n",
-    "\n",
+    "    conf_interval_95 = np.percentile(sample_students, (5, 100))\n",
+    "```\n",
     "Remember, if the observed mean falls outside that interval, then it is considered statistically significant. This is why when given a p-value, it is also important to know how that p-value was derived. \n",
     "\n",
-    "A more in-depth explanation (with pictures) can be found [here](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/)\n"
+    "A more in-depth explanation (with pictures) can be found at [UCLA's Institute for Digital Research and Education](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/)\n"
    ]
   },
   {
