--- a/1_hypothesis_testing.ipynb
+++ b/1_hypothesis_testing.ipynb
@@ -1078,23 +1078,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Note\n",
-    "\n",
-    "This is an example of a two-tailed hypothesis. We are testing whether the observed mean was in the upper or lower 2.5%. On the other hand, a one-tailed hypothesis only tests for one side, that is:\n",
-    "```python\n",
-    "    conf_interval_95 = np.percentile(sample_students, (0, 95))\n",
-    "                            or\n",
-    "    conf_interval_95 = np.percentile(sample_students, (5, 100))\n",
-    "```\n",
-    "Remember, if the observed mean falls outside that interval, then it is considered statistically significant. This is why when given a p-value, it is also important to know how that p-value was derived. \n",
-    "\n",
-    "A more in-depth explanation (with pictures) can be found at [UCLA's Institute for Digital Research and Education](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 222,
    "metadata": {
@@ -1133,6 +1116,23 @@
     "plt.scatter(525, 0,  s=400, color='r', marker=\"*\", label=\"population_mean\")\n",
     "plt.legend()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-tailed and Two-tailed Hypotheses\n",
+    "\n",
+    "This is an example of a two-tailed hypothesis. We are testing whether the observed mean was in the upper or lower 2.5%. On the other hand, a one-tailed hypothesis only tests for one side, that is:\n",
+    "```python\n",
+    "    conf_interval_95 = np.percentile(sample_students, (0, 95))\n",
+    "                            or\n",
+    "    conf_interval_95 = np.percentile(sample_students, (5, 100))\n",
+    "```\n",
+    "Remember, if the observed mean falls outside that interval, then it is considered statistically significant. This is why when given a p-value, it is also important to know how that p-value was derived. \n",
+    "\n",
+    "A more in-depth explanation (with pictures) can be found at [UCLA's Institute for Digital Research and Education](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests/)\n"
    ]
   },
   {
