Revert "add documentation for code"
This reverts commit 6641be26768fa0a280814f9d5757c5941d42bd7b.

--- a/Hypothesis_Testing.ipynb
+++ b/Hypothesis_Testing.ipynb
@@ -721,17 +721,16 @@
     }
    ],
    "source": [
-    "all_data = np.concatenate([male_spending, female_spending]) #combine male and female spending \n",
+    "all_data = np.concatenate([male_spending, female_spending])\n",
     "means_difference = []\n",
     "\n",
-    "for _ in range(1000): \n",
-    "    np.random.shuffle(all_data) # mix the data up the data of male and female spending\n",
-    "    male_s = all_data[:230] # assign 230 'people' to male_s *remember its a mix\n",
-    "    female_s = all_data[190:] #assign 190 'people' to female_s\n",
+    "for _ in range(1000):\n",
+    "    np.random.shuffle(all_data)\n",
+    "    male_s = all_data[:230]\n",
+    "    female_s = all_data[190:]\n",
     "    means_difference.append(np.mean(female_s) - np.mean(male_s))\n",
-    "    # add the resulting difference between the means both mixed sets to a list\n",
-    "    # and repeat this process 1000 times\n",
-    "_ = plt.hist(means_difference, edgecolor='k', linewidth=1.2, bins=12) # plot all of out mean difference data as a histogram\n",
+    "    \n",
+    "_ = plt.hist(means_difference, edgecolor='k', linewidth=1.2, bins=12)\n",
     "\n",
     "plt.scatter(np.mean(female_spending) - np.mean(male_spending), 0, color = \"red\", s=40)"
    ]
@@ -924,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
