More formatting and typos

--- a/Hypothesis_Testing.ipynb
+++ b/Hypothesis_Testing.ipynb
@@ -99,27 +99,27 @@
     "The data can be from either one or two samples. For instance:\n",
     "Comparing a single sample to a population with a known mean. \n",
     "\n",
-    "> Ex. you use a new math curriculum on a *sample* of randomly selected students and compare the results to the national average. Does your curriculum improve math exam score compared to the national average?\n",
+    "> **Ex:** You use a new math curriculum on a *sample* of randomly selected students and compare the results to the national average. Does your curriculum improve math exam score compared to the national average?\n",
     " \n",
     "Comparing two samples to determine whether there is a difference between them.\n",
-    "> **Example:** You teach your math curriculum to a group of students in the morning and another group of students in the afternoon. Is there a difference between learning math in the morning or the afternoon?"
+    "> **Ex:** You teach your math curriculum to a group of students in the morning and another group of students in the afternoon. Is there a difference between learning math in the morning or the afternoon?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Terminology - Cont'd\n",
+    "### Types of hypothesis\n",
     "\n",
     "1. The alternative hypothesis can be single-tailed:\n",
     "\n",
-    "> Ex. Our new method improves the average score compared to the national average $\\mu_{new\\_method} > \\mu_{national\\_score}$ \n",
+    "> **Ex**. Our new method improves the average score compared to the national average $\\mu_{new\\_method} > \\mu_{national\\_score}$ \n",
     "\n",
     "> A new medication decreases cholesterol levels  $\\mu_{cholesterol\\_treatment} < \\mu_{cholesterol\\_control}$\n",
     "\n",
     "2. The alternative hypothesis is two-tailed (The values must be different from a given value):\n",
     "\n",
-    ">  Ex. Rate of prescription of opiods in Hawaii is different from the national average. This implied\n",
+    ">  **Ex**. Rate of prescription of opiods in Hawaii is different from the national average. This implied\n",
     "   $\\mu_{opioids\\_hawaii} < \\mu_{opioids\\_nationally}$ or $\\mu_{opioids\\_hawaii} > \\mu_{opioids\\_nationally}$\n",
     "\n"
    ]
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### mean difference\n",
+    "### Mean difference\n",
     "The code is meant to look at the distribution of the mean difference in the time spent watching advertisements on youtube vs. vimeo. To do this we are going to create sample data for youtube and vimeo \n",
     "```python\n",
     "    youtube = np.random.normal(232, 2, 90)\n",
@@ -742,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### concatenate\n",
+    "### Concatenate\n",
     "\n",
     "Taking two datasets of similar shape (dimensionality) we can use np.concatenate to combine them and assign them to one dataset. In this example we start with male and female customer spending datasets and combine them together to create a generic customer spending dataset.\n",
     "\n",
@@ -997,28 +997,10 @@
    "source": [
     "### Comparing a Sample to a Distribution Param\n",
     "\n",
-    "Note that above we used the mean of the sample\n",
-    "We made at least one assumption about the underlying distribution\n",
+    "Note that above we used the mean of the sample. We made at least one assumption about the underlying distribution.\n",
     "\n",
-    "1. What if the underlying distribution is not normal\n",
-    "2. What if the data contains outliers that can bias our estimate of the mean?\n",
-    "\n",
-    "We can compute a statistic using a modified version of the two-sample method above"
+    "However, What if the underlying distribution is not normal? What if the data contains outliers that can bias our estimate of the mean? For these cases we can compute a statistic using a modified version of the two-sample method above."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
