--- a/Hypothesis_Testing.ipynb
+++ b/Hypothesis_Testing.ipynb
@@ -269,14 +269,14 @@
    "metadata": {},
    "source": [
     "### Mean difference\n",
-    "The code is meant to look at the distribution of the mean difference in the time spent watching advertisements on youtube vs. vimeo. To do this we are going to create sample data for youtube and vimeo \n",
+    "The code is meant to look at the distribution of the mean difference in the time spent watching advertisements on youtube vs. vimeo. To do this we are going to create sample data for Youtube and Vimeo. \n",
     "```python\n",
     "    youtube = np.random.normal(232, 2, 90)\n",
     "    vimeo = np.random.normal(219, 2, 90)\n",
     "```    \n",
     "As done before we are assuming the data stems from a normal distribution so we use random.normal. Ask yourself what is the mean, std. dist. and sample size of each set of data?\n",
     "\n",
-    "Answer:  Youtube has a mean value of 232, a std. dev. of 2, and we are grabbing 90 samples.\n",
+    "> Answer:  Youtube has a mean value of 232, a std. dev. of 2, and we are grabbing 90 samples.\n",
     "         The only difference with vimeo is that the mean value is 219.\n",
     "        \n",
     "We will then calculate the mean of each data set and append the difference to an array call means_difference.\n",
@@ -284,9 +284,7 @@
     "    means_difference.append(np.mean(youtube) - np.mean(vimeo))\n",
     "```\n",
     "Within the for loop we will repeat this process 1000 times.\n",
-    "\n",
     "After plotting means_difference we can visually see that the average difference between the means a bit over 13. \n",
-    "\n",
     "We can see this is an expected outcome as the mean for each dataset was 232 and 219, the difference of which is 13."
    ]
   },
@@ -297,7 +295,7 @@
     "### Assessing the variability of our statistic - Similar Samples\n",
     "\n",
     "What does the difference between two sample of the same distributions look like on average?\n",
-    "Here we choose data from Youtube's param but we can choose vemeo's\n",
+    "Here we choose data from Youtube's param but we can choose Vimeo's\n",
     "  \n",
     "```python\n",
     "youtube_1 = np.random.normal(232, 2, 90)\n",
